# adventofcode

./: README.md
2019/aoc1/: aoc1.c
2019/aoc10/: aoc10.c
2019/aoc2/: aoc2-refactored.c  aoc2.c
2019/aoc3/: aoc3.c
2019/aoc4/: aoc4.c
2019/aoc5/: aoc5.c  file-part1  file-part2
2019/aoc6/: aoc6.c
2019/aoc7/: aoc7.c
2019/aoc8/: aoc8.c
2019/aoc9/: aoc9.c
2020/haskell/: LICENSE  aoc20.cabal
2020/haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2020/haskell/src/: Eleven.hs  Thirteen.hs  Twelve.hs  Util.hs
2020/python/: adv1.py  adv2.py  adv3.py  adv4.py  adv6.py  adv8.py  util.py
2020/scheme/: adv14.ss
2021/python/: 1.py  2.py  3.py  4.py  9.py
2022/src-hs/: clean.sh  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs
2022/src-py/: day07.py
2023/aoc-2023-dart/: pubspec.yaml
2023/aoc-2023-dart/lib/: day1.dart
2023/aoc-2023-dart/test/: aoc23.dart
2023/aoc-2023-rs/: Cargo.toml  log
2023/aoc-2023-rs/src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
2023/input/: day10.input
2024/aoc-2024-dart/: pubspec.yaml
2024/aoc-2024-dart/lib/: day1.dart  day10.dart  day11.dart  day12.dart  day13.dart  day14.dart  day2.dart  day3.dart  day4.dart  day5.dart  day6.dart  day7.dart  day8.dart  day9.dart
2024/aoc-2024-dart/test/: aoc_2024_dart_test.dart
